--- a/profiles.yml
+++ b/profiles.yml
@@ -4,7 +4,7 @@ jaffle_shop: # this needs to match the profile: in your dbt_project.yml file
     dev:
       type: bigquery
       method: service-account
-      keyfile: /Users/claire/.dbt/dbt-user-creds.json # replace this with the full path to your keyfile
+      keyfile: dbt-user-creds.json # replace this with the full path to your keyfile
       project: pivotal-glider-332317 # Replace this with your project id
       dataset: dbt_karan # Replace this with dbt_your_name, e.g. dbt_bob
       threads: 1
